@@ -27,6 +27,18 @@
 	* config/abi/post/sparc-solaris/sparcv9/baseline_symbols.txt:
 	Likewise.
 
+2020-05-07  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR c/92472
+	* include/parallel/multiway_merge.h (_GuardedIterator::operator*)
+	(_GuardedIterator::operator _RAIter, _UnguardedIterator::operator*)
+	(_UnguardedIterator::operator _RAIter): Add const qualifier.
+	(operator<(_GuardedIterator&, _GuardedIterator&)
+	(operator<=(_GuardedIterator&, _GuardedIterator&)
+	(operator<(_UnguardedIterator&, _UnguardedIterator&)
+	(operator<=(_UnguardedIterator&, _UnguardedIterator&): Change
+	parameters to const references.
+
 2020-05-06  Martin Liska  <mliska@suse.cz>
 
 	Revert:
